samples/_failures_safe/1761622961_aaae76_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46e38736.c: In function ‘main’:
./samples/SAFE/__tmp_46e38736.c:158:19: error: missing terminating " character
  158 |         if (scanf("%d %d
      |                   ^~~~~~
./samples/SAFE/__tmp_46e38736.c:158:9: error: expected expression at end of input
  158 |         if (scanf("%d %d
      |         ^~
./samples/SAFE/__tmp_46e38736.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_46e38736.c:158:9: error: expected declaration or statement at end of input
